2018-10-02  Charlie Zender  <zender@uci.edu>

	* Expand bnd_nbr_max for all gases to accomodate new 2500/5000 band Malkmus files

	* Adopt new convention .par filename = hitran16_YYYYMMDD.txt

	* Updating August 2018 HITRAN which restores (from 2012) ~1200 H2O bands inadvertently dropped in 2016

	* Increase spectral range of Malkmus model from 2000-17900 cm-1 (1590 10cm-1 bands) to 2000-27000 cm-1 (2500 10cm-1 bands)

2018-10-01  Charlie Zender  <zender@uci.edu>

	* htrn2nb.F90 expand ln_nbr_max to 600000 since HITRAN16 O3 from 0.2--100.0 um has 449570, CO2 has 559874

	* htrn2nb.sh Keep all gases at 10 cm-1 bands except CO2 and CH4 at 5 cm-1 bands

	* Eliminate @defined(@array) syntax since Perl deprecated it in ~2014

2018-09-28  Charlie Zender  <zender@uci.edu>

	* Fixed bug where ss_alb_fct was set to 1.0 not to odsl/odxl for pure Rayleigh scattering atmospheres (neglected absorption)
	According to this ChangeLog, bug may have been introduced 20071215 and would have affected all simulations where particle scattering was turned-off

2018-06-06  Charlie Zender  <zender@uci.edu>

	* Add slr_zen_ngl_dgr_cmd_ln to ease computations for Cheng

2017-01-17  Charlie Zender  <zender@uci.edu>

	* Increase terms to convergence from original 10 to new 12 in disort3 plkavg()

	* Change lmn_TOA_cmd_ln from nL to ulm m-2 sr-1

2016-12-23  Charlie Zender  <zender@uci.edu>

	* Verified swnb3 passes tst_case_Rayleigh and tst_case_HG

	* Verified swnb3 is BFB with swnb2 for daytime runs

	* Makefile: PRC=D compiles with -fdefault-real-8 -fdefault-double-8 (required for DISORT3)

	* disotest and swnb3 work with above compile switch!

2016-12-22  Charlie Zender  <zender@uci.edu>

	* Define new native type r_ntv with PRC=N and/or by default
	swnb2 works fine with PRC=D
	swnb2 and swnb3 fail in rbn_vec() with PRC=F and PRC=N (also triggers IEEE underflow and denormal)
	swnb3 fails with with PRC=F
	disotest3 passes all tests with PRC=F
	disotest3 fails all tests with PRC=D, PRC=N
