@@ -1,5 +1,7 @@
 2018-10-02  Charlie Zender  <zender@uci.edu>
 
+	* Utilize temperature dependence of O3 cross-sections in each layer
+
 	* Expand bnd_nbr_max for all gases to accomodate new 2500/5000 band Malkmus files
 
 	* Adopt new convention .par filename = hitran16_YYYYMMDD.txt
